--- a/prospera/package.json
+++ b/prospera/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-password-checklist": "^1.6.0",
     "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
