--- a/prospera/package.json
+++ b/prospera/package.json
@@ -16,10 +16,12 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-password-checklist": "^1.6.0",
-    "react-router-dom": "^6.24.1"
+    "react-router-dom": "^6.24.1",
+    "react-scroll-motion": "^0.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
