--- a/prospera/package.json
+++ b/prospera/package.json
@@ -20,12 +20,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.2",
-    "openai": "^4.53.0",
     "gsap": "^3.12.5",
+    "openai": "^4.53.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-grid-layout": "^1.4.4",
     "react-password-checklist": "^1.6.0",
+    "react-router": "^6.25.1",
     "react-router-dom": "^6.24.1",
     "react-scroll-motion": "^0.3.3"
   },
