--- a/prospera/package.json
+++ b/prospera/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "axios": "^1.7.2",
     "gsap": "^3.12.5",
     "jwt-decode": "^4.0.0",
@@ -33,6 +34,7 @@
     "react-router": "^6.25.1",
     "react-router-dom": "^6.24.1",
     "react-scroll-motion": "^0.3.3",
+    "styled-components": "^6.1.12",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
