--- a/prospera/package.json
+++ b/prospera/package.json
@@ -22,6 +22,7 @@
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@novu/notification-center": "^2.0.0-canary.0",
     "axios": "^1.7.2",
     "gsap": "^3.12.5",
     "jwt-decode": "^4.0.0",
