--- a/prospera/package.json
+++ b/prospera/package.json
@@ -24,7 +24,9 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@novu/notification-center": "^2.0.0-canary.0",
     "axios": "^1.7.2",
+    "dot": "^1.1.3",
     "dotenv": "^16.4.5",
+    "env": "^0.0.2",
     "gsap": "^3.12.5",
     "jwt-decode": "^4.0.0",
     "openai": "^4.53.0",
