--- a/prospera/package.json
+++ b/prospera/package.json
@@ -36,6 +36,7 @@
     "react-router": "^6.25.1",
     "react-router-dom": "^6.24.1",
     "react-scroll-motion": "^0.3.3",
+    "react-ts-tradingview-widgets": "^1.2.5",
     "styled-components": "^6.1.12",
     "uuid": "^10.0.0"
   },
