--- a/prospera/package.json
+++ b/prospera/package.json
@@ -30,6 +30,7 @@
     "gsap": "^3.12.5",
     "jwt-decode": "^4.0.0",
     "ldrs": "^1.0.2",
+    "moment": "^2.30.1",
     "openai": "^4.53.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
